20120327 configure.in: add support for audiofile 0.3.x (patch #3508658) (Alberto
         Garcia).
20120506 make-perl.c,myglib/gslist.c: fix some const qualifiers for the data
         argument to g_slist_remove and g_slist_find_custom (part of bug
         #3514721) (Sergio Baldoví).
20120507 internals.h,libspectrum.c,libspectrum.h.in,make-perl.c,myglib/{ghash.c,
         gslist.c}: add g_hash_table_new_full() and libspectrum_end() for memory
         releasing (part of bug #3515269) (Sergio Baldoví).
20120916 Makefile.am: allow custom build flags for make-perl to address warning
         from the debian build system (bug #3567469) (Sergio Baldoví).
20120928 szx.c: read all possible RAM pages from the snap (thanks, ketmar)
         (Fred).
20121021 Makefile.am,acinclude.m4,autogen.sh,configure.ac,configure.in,
         m4/audiofile.m4,windres.rc: modernise autoconf support (more from patch
         #3575831) (Sergio).
20121026 configure.ac: fix the build when libaudiofile is not found and we are
         using an old pkg-config/autoconf (bug #3579244) (Sergio).
20121107 Makefile.am: fix the build when source and build trees are different
         (VPATH) (bug #3584527) (Sergio).
20121107 szx.c: fix potential calls to memcpy with a null pointer argument
         (thanks, clang 4.1) (Fred).
20121107 libspectrum.c: fix potential leak of memory pointed to by
         'new_filename' (thanks, clang 4.1) (Fred).
20121126 memory.c,myglib/garray.c,windres.rc: fix hard-coded Id tags and add
         missing properties (Sergio).
20121129 configure.ac: don't check for windres when not building for Windows
         hosts. Remove --without-windres option, previously used as a workaround
         (Sergio).
20121129 csw.c,rzx.c,szx.c: remove unused variables when not linking against
         external libraries (Sergio).
20121202 configure.ac: fix the macro expansion of PKG_CHECK_MODULES when using
         both --without-glib and --with-libaudiofile options (Sergio).