@@ -40,9 +40,18 @@ extern "C" {
 
 #ifdef _WIN32
 
-#define WIN32_LEAN_AND_MEAN	/* Exclude rarely used stuff from Windows
-				   headers */
+/* Exclude rarely used stuff from Windows headers */
+#ifndef WIN32_LEAN_AND_MEAN
+
+#define WIN32_LEAN_AND_MEAN /**/
 #include <windows.h>
+#undef WIN32_LEAN_AND_MEAN
+
+#else
+
+#include <windows.h>
+
+#endif				/* #ifndef WIN32_LEAN_AND_MEAN */
 
 #ifdef LIBSPECTRUM_EXPORTS
 #define WIN32_DLL __declspec( dllexport )
