@@ -909,3 +909,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
          external libraries (Sergio).
 20121202 configure.ac: fix the macro expansion of PKG_CHECK_MODULES when using
          both --without-glib and --with-libaudiofile options (Sergio).
+20121208 configure.ac,libspectrum.h.in: preliminary support for 64-bits binaries
+         for Windows (patch #3591613) (Sergio).
